[package]
name = "spatial-decomposition"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonaspleyer/spatial-decomposition"
documentation = "https://docs.rs/spatial-decomposition"

keywords = [
    "spatial",
    "decomposition",
    "numerics",
    "solver",
    "tearing",
    "interconnect",
]

[dependencies]
approx = "0.5.1"
approx-derive = "0.2.2"
num-traits = "0.2.19"
simba = "0.9.0"
