[package]
name = "spatial-decomposition"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonaspleyer/spatial-decomposition"
documentation = "https://docs.rs/spatial-decomposition"
description = "Algorithms to partition 2D spaces."

keywords = [
    "spatial",
    "decomposition",
    "domain",
]

[dependencies]
approx = { package = "approxim", version = "0.6.4" }
num-traits = "0.2.19"
simba = "0.9.0"
thiserror = "2.0.12"

[dev-dependencies]
plotters = { version = "0.3", features = ["colormaps"] }
criterion = "0.5.1"
rayon = "1.10.0"

[[bench]]
name = "kmr_digitize"
harness = false
